valida acceso a modulos segun roles de sistema

--- a/my/templates/index.html
+++ b/my/templates/index.html
@@ -13,7 +13,7 @@
 <script type="text/javascript" src="/static/js/i18n/grid.locale-en.js"></script>
 <script type="text/javascript" src="/static/js/jquery.jqGrid.min.js"></script>
 <script type="text/javascript" src="/static/js/WebToolKit.MD5.js"></script>
-
+<title>WAPM</title>
 </header>
     <body>
    <h1>Welcome!</h1>
@@ -29,9 +29,9 @@
 }
 </style>
     
-   <form id="login" method="get" action="/usuarioManager/"></form> 
+   <form id="login" method="get" action="/"></form> 
   <div id="dialogoLogin" title="Login">
-	<form ">
+	<form >
 		<fieldset class="fieldset">
 				<table>
 					<tr>
