--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -2,8 +2,9 @@
 <html>
 <header>
 
-	<link rel="stylesheet" type="text/css" media="screen"
-		href="/static/css/redmond/jquery-ui-1.9.2.custom.css" />
+	
+	 
+	<link rel="stylesheet" type="text/css" media="screen" href="/static/css/redmond/jquery-ui-1.9.2.custom.css" />
 	<link rel="stylesheet" type="text/css" media="screen"
 		href="/static/css/ui.jqgrid.css" />
 	<!-- <link rel="stylesheet" type="text/css" href="/static/css/stylem.css" />-->
