--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -11,6 +11,7 @@
 	
 	<script type="text/javascript" src="/static/js/jquery-1.8.3.js"></script>
 	<script type="text/javascript" src="/static/js/jquery.maskedinput.js"></script>
+	<script type="text/javascript" src="/static/js/jquery.number.js"></script>
 	<script type="text/javascript"
 		src="/static/js/jquery-ui-1.9.2.custom.js"></script>
 	<script type="text/javascript" src="/static/js/i18n/grid.locale-en.js"></script>
